added calculator project

--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
                     <a href="https://vishnukiran96.github.io/shoppertemplate/" class="btn btn-warning">Visit Website</a>
                 </div>
             </div>
+            <div class="card w-50 mt-4">
+                <div class="card-header">
+                    <img src="./public/images/emi_calculator.JPG" width="100%">
+                </div>
+                <div class="card-body">
+                    Sample EMI Calculator
+                </div>
+                <div class="card-footer">
+                    <a href="https://vishnukiran96.github.io/EMICalculator/" class="btn btn-warning">Visit Website</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
